--- a/src/app/client/password/password.component.html
+++ b/src/app/client/password/password.component.html
@@ -26,14 +26,13 @@
                 formControlName="recaptcha">
               </ngx-recaptcha2>
             </div>
-            
             <div *ngIf="captchaVerified">
-              <p class="box-text">Entrez votre Email pour réinitialiser votre mot de passe.</p>
+              <p class="box-text">{{ 'password.title' | translate }}</p>
               <form (ngSubmit)="onSubmitReset()" [formGroup]="passwordResetForm" class="form-group">
                 <div class="form-group">
-                  <input class="box-text" type="emailreset" id="emailreset" name="emailreset" formControlName="emailreset" placeholder="Votre Email" class="form-control">
+                  <input class="box-text" type="emailreset" id="emailreset" name="emailreset" formControlName="emailreset" [placeholder]="'password.placeholder' | translate" class="form-control">
                 </div>
-                <input type="submit" value="Reset">
+                <input type="submit" [value]="'password.resetbtn' | translate">
               </form>
             </div>
           
