--- a/src/app/client/signup/signup.component.html
+++ b/src/app/client/signup/signup.component.html
@@ -15,26 +15,26 @@
   <section id="banner12" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide2.png">
     <div class="container d-flex flex-column justify-content-center align-items-center">
         <div class="main-card">
-            <h2>Rejoignez-nous en tant que</h2>
+            <h2>{{ 'register.title' | translate }}</h2>
             <div class="card-container">
                 <div class="card">
                     <a href="/dash" class="card-link">
                         <div class="card-body">
-                            <h5 class="card-title">Particulier</h5>
+                            <h5 class="card-title">{{ 'register.type1' | translate }}</h5>
                         </div>
                     </a>
                 </div>
                 <div class="card">
                     <a href="/professionnel" class="card-link">
                         <div class="card-body">
-                            <h5 class="card-title">Professionnel</h5>
+                            <h5 class="card-title">{{ 'register.type2' | translate }}</h5>
                         </div>
                     </a>
                 </div>
                 <div class="card">
                     <a href="/organisation" class="card-link">
                         <div class="card-body">
-                            <h5 class="card-title">Organisation</h5>
+                            <h5 class="card-title">{{ 'register.type3' | translate }}</h5>
                         </div>
                     </a>
                 </div>
