--- a/src/app/client/updatedpassword/updatedpassword.component.html
+++ b/src/app/client/updatedpassword/updatedpassword.component.html
@@ -19,8 +19,8 @@
             <div class="row"> 
                 <div class="col-md-6">   
                         <div>
-                            <h4>Votre mot de passe a étè modifié avec succées!</h4>
-                            <a class="lien" href="/login">Cliquer ici pour se connecter.</a>
+                            <h4>{{ 'updatedpassword.title' | translate }}</h4>
+                            <a class="lien" href="/login">{{ 'updatedpassword.login' | translate }}</a>
                         </div>                
                 </div> 
             </div>
