--- a/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
+++ b/src/app/client/dashboard/mot-de-passe/mot-de-passe.component.html
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header">
-        <h4>Vos coordonnées d'authentification</h4>
+        <h4>{{ 'dash.authentication.title' | translate }}</h4>
     </div>
     <div class="card-body">
         <form [formGroup]="authForm">
@@ -10,20 +10,20 @@
                     <div class="form-group">
                         <div class="input-group">                          
                             <span class="input-group-text"><i class="bi bi-briefcase-fill"></i></span>
-                            <input type="text" name="login" class="form-control" placeholder="Login" formControlName="login" value=""/>
+                            <input type="text" name="login" class="form-control" [placeholder]="'dash.authentication.login_placeholder' | translate" formControlName="login" value=""/>
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="input-group">
                             <span class="input-group-text"><i class="fas fa-lock"></i></span>
-                            <input type="text" name="password" class="form-control" placeholder="Mot de passe" formControlName="password" value=""/>
+                            <input type="text" name="password" class="form-control" [placeholder]="'dash.authentication.password_placeholder' | translate" formControlName="password" value=""/>
                         </div>
                     </div>
                     
                 </div>
             </div>
-            <button type="button" class="btn btn-secondary butn" (click)="Suivant('validation')">Envoyer</button>
+            <button type="button" class="btn btn-secondary butn" (click)="Suivant('validation')">{{ 'dash.authentication.send_button' | translate }}</button>
         </form>
     </div>
 </div>
