--- a/src/app/client/login/login.component.html
+++ b/src/app/client/login/login.component.html
@@ -20,15 +20,15 @@
                 <div class="col-md-6">
                      <div>
                       <form (ngSubmit)="onSubmitLogin()" #loginForm="ngForm" class="box">
-                        <h1>Login</h1>
-                        <p class="box-text">Entrez vos coordonnées pour se connecter.</p> 
-                        <input type="login" id="loginName" name="login" [(ngModel)]="login" placeholder="Identifiant"> 
-                        <input type="password" id="loginPassword" name="password" [(ngModel)]="password" placeholder="Mot de passe"> 
+                        <h1>{{ 'login.title' | translate }}</h1>
+                        <p class="box-text">{{ 'login.subheading' | translate }}</p> 
+                        <input type="login" id="loginName" name="login" [(ngModel)]="login" [placeholder]="'login.username' | translate"> 
+                        <input type="password" id="loginPassword" name="password" [(ngModel)]="password" [placeholder]="'login.password' | translate"> 
                         <div *ngIf="authenticationError" class="alert alert-danger" role="alert">
-                          Vérifiez vos coordonnées !
+                          {{ 'login.alert' | translate }}
                         </div>
-                        <a class="forgot box-text" href="#"  href="/password">Mot de passe oublié?</a> 
-                        <input type="submit" value="Login">
+                        <a class="forgot box-text" href="#"  href="/password">{{ 'login.forgotPassword' | translate }}</a> 
+                        <input type="submit" [value]="'login.login' | translate">
                         <div class="col-md-12"> 
                             <ul class="social-network social-circle"> 
                                 <li><a href="#" class="icoWhatsapp" title="Whatsapp"><i class="fab fa-whatsapp"></i></a></li> 
@@ -36,7 +36,7 @@
                                 <li><a href="#" class="icoGoogle" title="Google +"><i class="fab fa-google-plus"></i></a></li> 
                             </ul> 
                         </div> 
-                        <p class="box-text">Vous n'avez pas de compte ? <a class="forgot box-text" href="/signup">Créer un compte</a></p>
+                        <p class="box-text">{{ 'login.register' | translate }}<a class="forgot box-text" href="/signup">{{ 'login.registerLink' | translate }}</a></p>
                     </form>
                             </div> 
                           </div> 
