--- a/src/app/client/password/password.component.css
+++ b/src/app/client/password/password.component.css
@@ -134,6 +134,31 @@ body, html {
     color: white !important;
 }
 
+.center-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Set height to viewport height for full-screen centering */
+}
+
+.homepage{
+    margin-left: 40px;
+    position: relative; /* Required for positioning the arrow */
+}
+
+.homepage::after {
+    content: '←';
+    position: absolute;
+    top: 50%;
+    right: -5px; 
+    transform: translateY(-50%); 
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+
+.homepage:hover::after {
+    opacity: 1;
+}
 
 
   #banner13 {
