--- a/src/app/home/details/details.component.html
+++ b/src/app/home/details/details.component.html
@@ -72,7 +72,7 @@
                                             <label for="term">{{ 'homepage.details.Periode' | translate }}</label>
                                             <input type="number" class="form-control" id="term" [(ngModel)]="loanTerm" name="term" required>
                                         </div>
-                                        <button type="submit"class="btn btn-secondary butn">Simuler</button>
+                                        <button type="submit"class="btn btn-secondary butn output">Simuler</button>
                                     </form>
                                     <div *ngIf="monthlyPayment">
                                         <h6>{{ 'homepage.details.Paiement' | translate }}</h6>
