--- a/src/app/client/reset/reset.component.html
+++ b/src/app/client/reset/reset.component.html
@@ -1,17 +1,5 @@
-<section id="topbar" class="d-flex align-items-center">
-    <div class="container d-flex justify-content-center justify-content-md-between">
-      <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@bfibank.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> +216 99 777 888
-      </div>
-      <div class="social-links d-none d-md-block">
-        <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      </div>
-    </div>
-  </section>
+<app-topbars></app-topbars>
+
 
   <section id="banner" class="bg-img cover-background full-screen p-0 banner" data-overlay-dark="2" data-background="../../../assets/img/banner/slide1.png">
     <div class="container d-flex flex-column">
